# Kurs_project_drf

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
atomic_habits/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
atomic_habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habits_addition_habit_and_more.py  0004_alter_habits_addition_habit.py  0005_alter_habits_addition_habit.py
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
