[tool.poetry]
name = "kurs-project-drf"
version = "0.1.0"
description = ""
authors = ["Aleksandr <feat9999@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
djangorestframework = "^3.16.1"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
