[tool.poetry]
name = "kurs-project-drf"
version = "0.1.0"
description = ""
authors = ["Aleksandr <feat9999@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
djangorestframework = "^3.16.1"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.5"
black = "^25.9.0"
pillow = "^11.3.0"
djangorestframework-simplejwt = "^5.5.1"
drf-yasg = "^1.21.10"
django-cors-headers = "^4.9.0"
celery = "^5.5.3"
coverage = "^7.10.7"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
